--- a/app/views/end_users/orders/confirm.html.erb
+++ b/app/views/end_users/orders/confirm.html.erb
@@ -48,7 +48,7 @@
 					<td>
 						合計金額
 					</td>
-					<td>
+					<td><%= f.hidden_field :total_amount, :value => @sum %>
 						<%= @sum %>
 					</td>
 				</tr>
