--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -7,19 +7,12 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items" %></td>
-				</tr>
-				<tr>
-					<td><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items" %></td>
-				</tr>
-				<tr>
-					<td><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items" %></td>
-				</tr>
-				<tr>
-					<td><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items" %></td>
-				</tr>
-			</tbody>
+					<% @genres.each do |genre| %>
+					<tr>
+						<td><%= link_to genre.name,end_users_path(genre.id) %></td>
+					</tr>
+					<% end %>
+				</tbody>
 		</table>
 		<h1>一覧(全<%= @items.count %>件)</h1>
 		<% @items.each do |item| %>
