--- a/app/views/end_users/items/genre.html.erb
+++ b/app/views/end_users/items/genre.html.erb
@@ -10,7 +10,7 @@
 				<tbody>
 					<% @genres.each do |genre| %>
 					<tr>
-						<td><%= link_to genre.name,end_users_items_path(genre.id) %></td>
+						<td><%= link_to genre.name,end_users_path(genre.id) %></td>
 					</tr>
 					<% end %>
 				</tbody>
@@ -20,6 +20,7 @@
 
 				<h1><%= @genre.name %>全<%= @genre.items.count %>件</h1>
 			</div>
+
 
 			<% @genre.items.each do |item| %>
 			<div class="item_image">
