--- a/app/views/end_users/items/show.html.erb
+++ b/app/views/end_users/items/show.html.erb
@@ -8,18 +8,11 @@
 					</tr>
 				</thead>
 				<tbody>
+					<% @genres.each do |genre| %>
 					<tr>
-						<td><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items" %></td>
+						<td><%= link_to genre.name,end_users_items_path %></td>
 					</tr>
-					<tr>
-						<td><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items"%></td>
-					</tr>
-					<tr>
-						<td><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items"%></td>
-					</tr>
-					<tr>
-						<td><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items" %></td>
-					</tr>
+					<% end %>
 				</tbody>
 			</table>
 
