--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -1,35 +1,40 @@
-<div class="container">
-	<div class="row">
-		<table class="genres_sarch">
-			<thead>
-				<tr>
-					<th>ジャンル検索</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items" %></td>
-				</tr>
-				<tr>
-					<td><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items" %></td>
-				</tr>
-				<tr>
-					<td><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items" %></td>
-				</tr>
-				<tr>
-					<td><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items" %></td>
-				</tr>
-			</tbody>
-		</table>
-		<h1>一覧(全<%= @items.count %>件)</h1>
-		<% @items.each do |item| %>
-					<div class="item-box">
-						<p><%= link_to end_users_item_path(item) do %>
-							<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
-							<% end %></p>
+<body class= "userbody">
+	<div class="container">
+		<div class="row">
+			<table class="genres_sarch col-xs-3">
+				<thead >
+					<tr>
+						<th class= "toptext">ジャンル検索</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items", class: "genre1" %></td>
+					</tr>
+					<tr>
+						<td><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items", class: "genre2" %></td>
+					</tr>
+					<tr>
+						<td><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items", class: "genre3" %></td>
+					</tr>
+					<tr>
+						<td><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items", class: "genre4" %></td>
+					</tr>
+				</tbody>
+			</table>
+			<div class= "col-xs-9">
+				<h1 class= "toptext">一覧(全<%= @items.count %>件)</h1>
+				<% @items.each do |item| %>
+				<div class="item-box col-xs-3" style="margin-right: 30px;">
+					<%= link_to end_users_item_path(item) do %>
+						<p><%= attachment_image_tag item, :image, size: 130, fallback:"no_image.jpg"%>
+						</p>
 						<p><%= item.name %></p>
 						<p>¥<%= item.price %></p>
+						<% end %>
 					</div>
 					<% end %>
-	</div>
-</div>
+				</div>
+			</div>
+		</div>
+	</body>
