--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,11 +62,11 @@
   </nav>
 </header>
 <div class="body">
+  <div class="wrapper">
   <%= yield %>
 </div>
- <footer class="container">
-  <div class="row">
-    <div class="footer">
+ <footer>
+    <div class="footer" style="">
       <p>©ながのCAKE Production by TGT</p>
     </div>
   </footer>
