--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,6 @@
  .my-orange {color: #FFF3E0}
 
  .header {
- 	font-family: 'Creepster', cursive;
  	font-color: #FAFAFA;
  	text-align: center;
  	vertical-align: middle;
@@ -35,7 +34,7 @@
  }
 
  header {
- 	background-color: #FF9800;
+ 	background-color: #FCAA00;
  	background-size: 100%;
  	text-align: center;
  }
@@ -45,9 +44,17 @@
 
  }
 
+ .wrapper {
+ 	min-height: 100vh;
+    position: relative;/*←相対位置*/
+    padding-bottom: 150px;/*←footerの高さ*/
+    box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
+ }
+
  footer {
- 	background-color: #FFB74D;
+ 	background-color: #FCAA00;
  	text-align: center;
+ 	vertical-align: bottom;
  }
 
 a.black {
