--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -1,7 +1,8 @@
+<body class= "userbody">
 <div class="container">
 	<div class="row">
 		<body>
-			<table class="genres_sarch">
+			<table class="genres_sarch col-xs-3">
 				<thead>
 					<tr>
 						<th>ジャンル検索</th>
@@ -9,36 +10,34 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items" %></td>
+						<td class= "genre1"><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items" %></td>
 					</tr>
 					<tr>
-						<td><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items" %></td>
+						<td class= "genre2"><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items" %></td>
 					</tr>
 					<tr>
-						<td><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items" %></td>
+						<td class= "genre3"><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items" %></td>
 					</tr>
 					<tr>
-						<td><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items" %></td>
+						<td class= "genre4"><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items" %></td>
 					</tr>
 				</tbody>
 			</table>
 
-			<div>
-
+			<div class= "col-xs-9">
 				<h1><%= @genre.name %>全<%= @genre.items.count %>件</h1>
 			</div>
 
 			<% @items.each do |item| %>
 			<div class="item_image">
-				<%= link_to end_users_item_path(item) do %>
+				<div class="item-box">
+				<p><%= link_to end_users_item_path(item) do %>
 				<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
-				<% end %>
-				<%= item.name %>
+				<% end %></p>
+				<p><%= item.name %></p>
 				<P>¥<%= item.price %>(税抜き)</P>
 			</div>
 			<% end %>
-
 		</body>
-
 	</div>
 </div>
