--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,11 +62,10 @@
   </nav>
 </header>
 <div class="body">
-  <div class="wrapper">
   <%= yield %>
 </div>
  <footer>
-    <div class="footer" style="">
+    <div class="footer">
       <p>©ながのCAKE Production by TGT</p>
     </div>
   </footer>
