--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,18 +43,20 @@
  	margin-top: auto;
 
  }
+ body {
+ 	 	min-height: 100vh;
+    	position: relative;/*←相対位置*/
+    	padding-bottom: 150px;/*←footerの高さ*/
 
- .wrapper {
- 	min-height: 100vh;
-    position: relative;/*←相対位置*/
-    padding-bottom: 150px;/*←footerの高さ*/
-    box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
  }
 
+
  footer {
+ 	width: 100%;
  	background-color: #FCAA00;
  	text-align: center;
- 	vertical-align: bottom;
+    position: absolute;/*←絶対位置*/
+    bottom: 0; /*下に固定*/
  }
 
 a.black {
