--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -1,33 +1,34 @@
-
-<div class="container">
-	<div class="row">
-		<table class="genres_sarch col-xs-3">
-			<thead>
-				<tr>
-					<th class= "toptext">ジャンル検索</th>
-				</tr>
-			</thead>
-			<tbody>
+<body class=topbody>
+	<div class="container">
+		<div class="row">
+			<table class="genres_sarch col-xs-3">
+				<thead>
+					<tr>
+						<th class= "toptext">ジャンル検索</th>
+					</tr>
+				</thead>
+				<tbody>
 					<% @genres.each do |genre| %>
 					<tr>
-						<td><%= link_to genre.name,end_users_path(genre.id) %></td>
+						<td><%= link_to genre.name,end_users_path(genre.id),class: "genre" , :style => "margin:8px; width:50%; text-align:center;" %>
+						</td>
 					</tr>
 					<% end %>
 				</tbody>
-		</table>
-		<div class= "col-xs-9">
+			</table>
+			<div class= "col-xs-9">
 				<h1 class= "toptext">一覧(全<%= @items.count %>件)</h1>
 				<% @items.each do |item| %>
 				<div class="item-box col-xs-3" style="margin-right: 30px;">
 					<%= link_to end_users_item_path(item) do %>
-						<p><%= attachment_image_tag item, :image, size: 130, fallback:"no_image.jpg"%>
-						</p>
-						<p><%= item.name %></p>
-						<p>¥<%= item.price %></p>
-						<% end %>
-					</div>
+					<p><%= attachment_image_tag item, :image, size: 130, fallback:"no_image.jpg"%>
+					</p>
+					<p><%= item.name %></p>
+					<p>¥<%= item.price %></p>
 					<% end %>
 				</div>
+				<% end %>
 			</div>
 		</div>
-	</body>
+	</div>
+</body>
