--- a/app/views/end_users/items/genre.html.erb
+++ b/app/views/end_users/items/genre.html.erb
@@ -1,38 +1,39 @@
-<div class="container">
-	<div class="row">
-		<body>
-			<table class="genres_sarch">
+<body class= "userbody">
+	<div class="container">
+		<div class="row">
+			<table class="genres_sarch col-xs-3">
 				<thead>
 					<tr>
-						<th>ジャンル検索</th>
+						<th class= "toptext">ジャンル検索</th>
 					</tr>
 				</thead>
 				<tbody>
 					<% @genres.each do |genre| %>
 					<tr>
-						<td><%= link_to genre.name,end_users_path(genre.id) %></td>
+						<td><%= link_to genre.name,end_users_path(genre.id), class: "genre", :style => "margin:8px; width:50%; text-align:center;" %></td>
 					</tr>
 					<% end %>
 				</tbody>
 			</table>
 
 			<div>
-
-				<h1><%= @genre.name %>全<%= @genre.items.count %>件</h1>
+				<div class= "col-xs-9">
+					<h1 class= "itemtext"><%= @genre.name %>全<%= @genre.items.count %>件</h1>
+				</div>
 			</div>
 
 
 			<% @genre.items.each do |item| %>
 			<div class="item_image">
-				<%= link_to end_users_item_path(item) do %>
-				<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
+				<div class="item-box col-xs-3" style="margin-right: 30px;">
+					<%= link_to end_users_item_path(item) do %>
+					<p><%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%></p>
+					<p><%= item.name %></p>
+					<P>¥<%= item.price %>(税抜き)</P>
+					<% end %>
+				</div>
 				<% end %>
-				<%= item.name %>
-				<P>¥<%= item.price %>(税抜き)</P>
 			</div>
-			<% end %>
-
-		</body>
-
+		</div>
 	</div>
-</div>
+</body>
