--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -1,37 +1,37 @@
 <body class= "userbody">
-<div class="container">
-	<div class="row">
-		<body>
+	<div class="container">
+		<div class="row">
 			<table class="genres_sarch col-xs-3">
 				<thead>
 					<tr>
-						<th>ジャンル検索</th>
+						<th class= "toptext">ジャンル検索</th>
 					</tr>
 				</thead>
 				<tbody>
 					<% @genres.each do |genre| %>
 					<tr>
-						<td><%= link_to genre.name,end_users_items_path(genre.id) %></td>
-
+						<td><%= link_to genre.name,end_users_items_path(genre.id), class: "genre" , :style => "margin:8px; width:50%; text-align:center;"%></td>
 					</tr>
 					<% end %>
 				</tbody>
 			</table>
 
 			<div class= "col-xs-9">
-				<h1><%= @genre.name %>全<%= @genre.items.count %>件</h1>
+				<h1 class= "itemtext"><%= @genre.name %>全<%= @genre.items.count %>件</h1>
 			</div>
 
 			<% @genre.items.each do |item| %>
 			<div class="item_image">
-				<div class="item-box">
-				<p><%= link_to end_users_item_path(item) do %>
-				<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
-				<% end %></p>
-				<p><%= item.name %></p>
-				<P>¥<%= item.price %>(税抜き)</P>
+				<div class="item-box col-xs-3" style="margin-right: 30px;">
+					<%= link_to end_users_item_path(item) do %>
+					<p><%= attachment_image_tag item, :image, size: 130, fallback:"no_image.jpg"%></p>
+					<p><%= item.name %></p>
+					<P>¥<%= item.price %>(税抜き)</P>
+					<% end %>
+				</div>
+				<% end %>
 			</div>
-			<% end %>
-		</body>
+		</div>
 	</div>
-</div>
+</body>
+
