--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-  <h1 class="header">NAGANO<i class="fas fa-birthday-cake my-orange fa-2x fa-fw faa-float animated"></i>Cake</h1>
+  <h1 class="header"><%= link_to "NAGANOCAKE", class: "fas fa-birthday-cake my-orange fa-2x fa-fw faa-float animated " %></h1>
   <nav class="">
     <ul class="">
       <% if end_user_signed_in? %>
