--- a/app/views/end_users/end_users/show.html.erb
+++ b/app/views/end_users/end_users/show.html.erb
@@ -18,8 +18,8 @@
 			<tr>
 				<th>カナ</th>
 				<td>
-					<%= @end_user.first_name %>
-					<%= @end_user.last_name %>
+					<%= @end_user.first_name_kana %>
+					<%= @end_user.last_name_kana %>
 				</td>
 			</tr>
 			<tr>
