--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -15,9 +15,13 @@
 					<td>銀行振込</td>
 				</tr>
 				<tr>
+					<%= form_for(@order, url:admins_order_path(@order.id), method: :pacth) do |f| %>
 					<td>注文ステータス</td>
-					<td><%= f.select :sale_status, [["0", "入金待ち"], ["1", "入金確認"]["2", "製作中"], ["3", "発送準備中"]["4", "発送済み"] %></td>
-					<td><%= button_to "更新", action: "update" %></td>
+					<td>
+						<label><%= f.select :order_status, Order.order_statuses.keys,{} %></label>
+					</td>
+					<td><%= f.submit "更新" %></td>
+					<% end %>
 				</tr>
 			</tbody>
 		</table>
@@ -33,14 +37,17 @@
 				</tr>
 			</thead>
 			<tbody>
-				<%= @order_itmes.each do |order_item| %>
+				<% @order.order_items.each do|order_item| %>
 				<tr>
 					<td><%= order_item.name %></td>
 					<td><%= order_item.price_tax %></td>
 					<td><%= order_item.order_quantity %></td>
 					<td><%= order_item.total_price %></td>
-					<td><%= f.select :production_status, [["0","着手不可"]["1","制作待ち"]["2","製作中"],["3","制作完了"]] %></td>
-					<td><%= button_to "更新", action: "update" %></td>
+					<%= form_for(@order_items, url:admins_order_item method: :patch) do |f| %>
+					<td>
+						<label><%= f.select :production_status,Order_item.production_statuses.keys,{} %></label>
+					</td>
+					<td><%= f.submit "更新" %></td>
 				</tr>
 				<% end %>
 			</tbody>
@@ -58,7 +65,7 @@
 				</tr>
 				<tr>
 					<td>請求金額合計</td>
-					<td><%= @order.price %>円</td>
+					<td><%= @order.total_price + 800 %>円</td>
 				</tr>
 			</tbody>
 		</table>
