--- a/app/views/end_users/orders/index.html.erb
+++ b/app/views/end_users/orders/index.html.erb
@@ -28,7 +28,7 @@
 				<!-- 下記の３行を訂正 -->
 				<td><%= "注文商品名をここに表示" %></td>
 				<td><%= order.total_amount %></td>
-				<td><%= "注文ステータスをここに表示" %></td>
+				<td><%= order.order_status %></td>
 
 
 
