--- a/app/views/admins/end_users/edit.html.erb
+++ b/app/views/admins/end_users/edit.html.erb
@@ -35,7 +35,7 @@
 		<tr>
 			<td>会員ステータス</td>
 			<td>
-				<label><%= f.radio_button "statys_id", "1" %>有効</label>
+				<label><%= f.radio_button "status_id", "1" %>有効</label>
 				<label><%= f.radio_button "status_id", "2" %>退会済み</label>
 			</td>
 		</tr>
