--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -9,11 +9,12 @@
 		</tr>
 	</thead>
 	<tbody>
-		<%= @orders.each do |order| %>
+		<% @orders.each do |order| %>
 		<tr>
-			<td><%= link_to order.creat_at, admins_order_path(order) %></td>
-			<td><%= order.full_name %></td>
-			<td><%= order.order_item.order_quantity %></td>
+			<td><%= link_to order.created_at.strftime("%Y/%m/%d %H:%M"), admins_order_path(order) %></td>
+			<td><%= order.end_user.first_name %>
+				<%= order.end_user.last_name %>
+			</td>
 			<td><%= order.order_status %></td>
 		</tr>
 
