--- a/app/views/end_users/orders/show.html.erb
+++ b/app/views/end_users/orders/show.html.erb
@@ -1,79 +1,80 @@
 <body class= "ordersbody">
+	<div class="container">
+		<div class="row">
 
-	<!-- 注文履歴詳細 -->
-	<h2>注文履歴詳細</h2>
-	<table class="order-info table">
-		<h3>注文履歴詳細</h3>
-		<thead>
-		</thead>
-		<tbody>
-			<tr>
-				<th>注文日</th>
-				<td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
-			</tr>
-			<tr>
-				<th>配送先</th>
-				<td>
-					<%= @order.zip_code %>
-					<%= @order.address %>
-					<%= @order.order_name %>
-				</td>
-			</tr>
-			<tr>
-				<th>支払い方法</th>
-				<td><%= @order.payment_method %></td>
-			</tr>
-			<tr>
-				<th>ステータス</th>
-				<td><%= @order.order_status %></td>
-			</tr>
-		</tbody>
-	</table>
+			<!-- 注文履歴詳細 -->
+			<h2 class= "toptext">注文履歴詳細</h2>
+			<table class="order-info table">
+				<tbody>
+					<tr>
+						<th>注文日</th>
+						<td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+					</tr>
+					<tr>
+						<th>配送先</th>
+						<td>
+							<%= @order.zip_code %>
+							<%= @order.address %>
+							<%= @order.order_name %>
+						</td>
+					</tr>
+					<tr>
+						<th>支払い方法</th>
+						<td><%= @order.payment_method %></td>
+					</tr>
+					<tr>
+						<th>ステータス</th>
+						<td><%= @order.order_status %></td>
+					</tr>
+				</tbody>
+			</table>
 
-	<!-- 請求情報 -->
-	<table class="claim-info table">
-		<h3>請求情報</h3>
-		<thead>
-		</thead>
-		<tbody>
-			<tr>
-				<th>商品合計</th>
-				<td><%= @order.total_amount %></td>
-			</tr>
-			<tr>
-				<th>配送料</th>
-				<td>
-					<%= 800 %>
-				</td>
-			</tr>
-			<tr>
-				<th>ご請求額</th>
-				<td><%= @order.total_amount + 800 %></td>
-			</tr>
-		</tbody>
-	</table>
-<!-- 注文内容 -->
-	<table>
-		<h3>注文内容</h3>
-		<thead>
-			<tr>
-				<th>商品</th>
-				<th>単価（税込）</th>
-				<th>個数</th>
-				<th>小計</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @order.order_items.each do|order_item| %>
-			<tr>
-				<% @order.items.each do|item| %>
-				<td><%= item.name %></td>
-				<% end %>
-				<td><%= order_item.price_tax %></td>
-				<td><%= order_item.order_quantity %></td>
-				<td><%= order_item.price_tax * order_item.order_quantity %></td>
-			</tr>
-			<% end %>
-		</tbody>
-	</table>
+			<!-- 請求情報 -->
+			<table class="claim-info table">
+				<h3 class= "toptext">請求情報</h3>
+				<thead>
+				</thead>
+				<tbody>
+					<tr>
+						<th>商品合計</th>
+						<td><%= @order.total_amount %></td>
+					</tr>
+					<tr>
+						<th>配送料</th>
+						<td>
+							<%= 800 %>
+						</td>
+					</tr>
+					<tr>
+						<th>ご請求額</th>
+						<td><%= @order.total_amount + 800 %></td>
+					</tr>
+				</tbody>
+			</table>
+			<!-- 注文内容 -->
+			<table>
+				<h3 class= "toptext">注文内容</h3>
+				<thead>
+					<tr>
+						<th>商品</th>
+						<th>単価（税込）</th>
+						<th>個数</th>
+						<th>小計</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @order.order_items.each do|order_item| %>
+					<tr>
+						<% @order.items.each do|item| %>
+						<td><%= item.name %></td>
+						<% end %>
+						<td><%= order_item.price_tax %></td>
+						<td><%= order_item.order_quantity %></td>
+						<td><%= order_item.price_tax * order_item.order_quantity %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
