--- a/app/views/end_users/orders/index.html.erb
+++ b/app/views/end_users/orders/index.html.erb
@@ -27,7 +27,7 @@
 				<% order.items.each do |item| %>
 				<td><%= item.name %></td>
 				<% end %>
-				<td><%= order.total_amount %></td>
+				<td><%= order.total_amount %>円</td>
 				<td><%= order.order_status %></td>
 
 
