--- a/app/views/admins/end_users/index.html.erb
+++ b/app/views/admins/end_users/index.html.erb
@@ -18,13 +18,18 @@
 						<td><%= end_user.id %></td>
 						<td><%= link_to end_user.full_name ,admins_end_user_path(end_user.id)  %></td>
 						<td><%= end_user.email  %></td>
-						<td><% if end_user.deleted end %>
-							<!-- if文を使ってdeleted_atがあった場合の表示したい内容　無い時の表示したい内容を書く -->
-							</td>
-					</tr>
-					<% end %>
-				</tbody>
-			</table>
-		</body>
+						<!-- if文を使ってdeleted_atがあった場合の表示したい内容　無い時の表示したい内容を書く -->
+						<td>
+							<% if deleted_at.present? then
+								true = "退会済"
+							else
+								false = "有効"
+							end %>
+						</td>
+						</tr>
+						<% end %>
+					</tbody>
+				</table>
+			</body>
+		</div>
 	</div>
-</div>
