--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -15,7 +15,7 @@
 					<td>銀行振込</td>
 				</tr>
 				<tr>
-					<%= form_for(@order, url:admins_order_path(@order.id), method: :pacth) do |f| %>
+					<%= form_for(@order, url:admins_order_path(@order.id), method: :patch) do |f| %>
 					<td>注文ステータス</td>
 					<td>
 						<label><%= f.select :order_status, Order.order_statuses.keys,{} %></label>
@@ -37,17 +37,22 @@
 				</tr>
 			</thead>
 			<tbody>
-				<% @order.order_items.each do|order_item| %>
+				<% @order.order_items.each do |order_item| %>
 				<tr>
-					<td><%= order_item.name %></td>
+					<td><%= order_item.item.name %></td>
 					<td><%= order_item.price_tax %></td>
 					<td><%= order_item.order_quantity %></td>
-					<td><%= order_item.total_price %></td>
-					<%= form_for(@order_items, url:admins_order_item method: :patch) do |f| %>
-					<td>
+					<td><%= order_item.order_quantity*order_item.price_tax %></td>
+					<%= form_for(@order_items, url:admins_order_item, method: :patch) do |f| %>
+					<td><%= f.hidden_field :order_item_id, :value => order_item.id %>
+
+
+
+
 						<label><%= f.select :production_status,Order_item.production_statuses.keys,{} %></label>
 					</td>
 					<td><%= f.submit "更新" %></td>
+					<% end %>
 				</tr>
 				<% end %>
 			</tbody>
