--- a/app/views/end_users/homes/about.html.erb
+++ b/app/views/end_users/homes/about.html.erb
@@ -1,6 +1,9 @@
+<body class="topbody">
 <div class="container">
 	<div class="row">
-		<h1>EndUsers::Homes#about</h1>
-		<p>Find me in app/views/end_users/homes/about.html.erb</p>
+		<h1 class= "toptext">NAGANO-CAKE</h1>
+		<p class= "toptext">世界一のお菓子を売るケーキショップへようこそ</p>
 	</div>
 </div>
+
+</body>
