--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,13 @@
     position: absolute;/*←絶対位置*/
     bottom: 0; /*下に固定*/
  }
+ .afooter {
+ 	width: 100%;
+ 	background-color: #67C7D4;
+ 	text-align: center;
+    position: absolute;/*←絶対位置*/
+    bottom: 0; /*下に固定*/
+ }
 
 a.black {
 	color: #000000;
