--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,24 +1,26 @@
-<div class="container">
-	<div class="row">
-		<h2>ジャンル編集画面</h2>
+<body class= "abody">
+	<div class="container">
+		<div class="row">
+			<h2 class= "atoptext">ジャンル編集画面</h2>
 
-		<label>ジャンル</label>
-		<%= form_for(@genre,url:admins_genre_path(@genre), method: :patch) do |f| %>
+			<label class= "atoptext">ジャンル</label>
+			<%= form_for(@genre,url:admins_genre_path(@genre), method: :patch) do |f| %>
 
-		<!-- ここにラジオボタン追加 -->
-		<div class="col-xs-3">
-			<div>
-				<label>
-					<%= f.radio_button :is_active, true %>有効
-				</label>
-				<label>
-					<%= f.radio_button :is_active, false %>無効
-				</label>
+			<!-- ここにラジオボタン追加 -->
+			<div class="col-xs-3">
+				<div class= "atoptext">
+					<label>
+						<%= f.radio_button :is_active, true, :style => "margin:10px;" %>有効
+					</label>
+					<label>
+						<%= f.radio_button :is_active, false, :style => "margin:10px;" %>無効
+					</label>
+				</div>
 			</div>
-		</div>
-		<%= f.text_field :name%>
+			<%= f.text_field :name%>
 
-		<%= f.submit "変更保存" %>
-		<% end %>
+			<%= f.submit "変更保存", class: "admin", :style => "margin:10px;" %>
+			<% end %>
+		</div>
 	</div>
-</div>
+</body>
