--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -1,28 +1,29 @@
 <div class="container">
 	<div class="row">
-		<h2>ジャンル追加・一覧画面</h2>
+		<body class="abody">
+		<h2 class= "atoptext">ジャンル追加・一覧画面</h2>
 
-		<label>ジャンル</label>
+		<label class= "atoptext">ジャンル</label>
 		<%= form_for(@genre,url:admins_genres_path, method: :post) do |f| %>
 
 		<!-- ここにラジオボタン追加 -->
 
 
 		<div class="col-xs-3">
-			<label>
-				<%= f.radio_button :is_active, true %>有効
+			<label class= "atoptext">
+				<%= f.radio_button :is_active, true, :style => "margin:10px;" %>有効
 			</label>
-			<label>
-				<%= f.radio_button :is_active, false %>無効
+			<label class= "atoptext">
+				<%= f.radio_button :is_active, false, :style => "margin:10px;" %>無効
 			</label>
 		</div>
 		<%= f.text_field :name%>
-		<%= f.submit "追加" %>
+		<%= f.submit "追加", class: "admin", :style => "margin:10px; text-decoration:none; color:white;"%>
 
 		<% end %>
 
 		<table class="table table-hover table-inverse">
-			<thead>
+			<thead class= "atoptext">
 				<tr>
 					<th>ジャンル</th>
 					<th>状態</th>
@@ -31,7 +32,7 @@
 			</thead>
 			<tbody>
 				<% @genres.each do |genre| %>
-				<tr>
+				<tr class= "atoptext">
 					<td>
 						<%= genre.name %>
 					</td>
@@ -43,7 +44,7 @@
 						<% end %>
 					</td>
 					<td>
-						<%= link_to "編集する", edit_admins_genre_path(genre.id) %>
+						<%= link_to "編集する", edit_admins_genre_path(genre.id), class: "admin2", :style => "text-decoration:none;" %>
 					</td>
 				</tr>
 				<% end %>
@@ -51,3 +52,4 @@
 		</table>
 	</div>
 </div>
+</body>
