--- a/app/views/admins/items/edit.html.erb
+++ b/app/views/admins/items/edit.html.erb
@@ -1,27 +1,41 @@
-<div class="container">
-	<div class="row">
-		<body>
-			<h1>商品 編集画面</h1>
-
-			<%= form_for(@item, url:admins_item_path, method: :patch) do |f| %>
-			<%= attachment_image_tag @item, :image, :fill, 60, 60,format: "jpeg", fallback: "no_image.jpg"%>
-			<div>
-				<label>商品名</label>
-				<%= f.text_field :name%>
-
-				<label>商品説明</label>
-				<%= f.text_area :description%>
-
-				<label>ジャンル</label>
-				<%= f.collection_select :genre_id, Genre.all, :id, :name %>
-				<label>税抜価格</label>
-				<%= f.text_field :price%>
-
-				<label>販売ステータス</label>
-				<%= f.select :sale_status, Item.sale_statuses.keys, {} %>
-				<%= f.submit "保存" %>
-				<% end %>
+<body class= "abody">
+	<div class="container">
+		<div class="row">
+			<h1 class="atoptext">商品 編集画面</h1>
+			<div class="col-xs-3">
+				<div>
+					<%= form_for(@item, url:admins_item_path, method: :patch) do |f| %>
+					<%= attachment_image_tag @item, :image, size: 200,format: "jpeg", fallback: "no_image.jpg"%>
+				</div>
 			</div>
-		</body>
+			<div class="atoptext">
+				<div class= "col-xs-9">
+					<ul>
+						<li>
+							<label>商品名</label>
+							<%= f.text_field :name%>
+						</li>
+						<li>
+							<label>商品説明</label>
+							<%= f.text_area :description%>
+						</li>
+						<li>
+							<label>ジャンル</label>
+							<%= f.collection_select :genre_id, Genre.all, :id, :name %>
+						</li>
+						<li>
+							<label>税抜価格</label>
+							<%= f.text_field :price%>
+						</li>
+						<li>
+							<label>販売ステータス</label>
+							<%= f.select :sale_status, Item.sale_statuses.keys, {} %>
+						</li>
+					</ul>
+					<%= f.submit "保存",class: "admin" %>
+					<% end %>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
+</body>
