--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -1,37 +1,38 @@
-<div class="container">
-  <div class="row">
-    <h2>商品　詳細画面</h2>
+<body class= "abody">
+  <div class="container">
+    <div class="row">
+      <h2 class="atoptext">商品　詳細画面</h2>
 
-    <div class="item_image col-xs-3">
-      <%= attachment_image_tag @item, :image, size: 200, fallback:"no_image.jpg"%>
-    </div>
-    <table>
-     <tbody>
-      <tr>
-       <td>商品名</td>
-       <td><%= @item.name %></td>
-     </tr>
-     <tr>
-       <td>商品説明</td>
-       <td><%= @item.description %></td>
-     </tr>
-     <tr>
-       <td>ジャンル</td>
-       <td><%= @item.genre.name %> </td>
-     </tr>
-     <tr>
-       <td>税抜価格</td>
-       <td><%= @item.price %></td>
-     </tr>
-     <tr>
-       <td>販売ステータス</td>
-       <td><%= @item.sale_status %></td>
-     </tr>
-     <tr>
-       <td><%= link_to "編集", edit_admins_item_path(@item) %> </td>
-     </tr>
-   </tbody>
- </table>
+      <div class="item_image col-xs-3">
+        <%= attachment_image_tag @item, :image, size: 200, fallback:"no_image.jpg"%>
+      </div>
+      <table>
+       <tbody>
+        <tr class="atoptext">
+         <td>商品名</td>
+         <td><%= @item.name %></td>
+       </tr>
+       <tr class="atoptext">
+         <td>商品説明</td>
+         <td><%= @item.description %></td>
+       </tr>
+       <tr class="atoptext">
+         <td>ジャンル</td>
+         <td><%= @item.genre.name %> </td>
+       </tr>
+       <tr class="atoptext">
+         <td>税抜価格</td>
+         <td><%= @item.price %></td>
+       </tr>
+       <tr class="atoptext">
+         <td>販売ステータス</td>
+         <td><%= @item.sale_status %></td>
+       </tr>
+       <tr>
+        <td><%= link_to "編集", edit_admins_item_path(@item), class: "admin", :style => "margin:20px; text-decoration:none; color:white;" %> </td>
+       </tr>
+     </tbody>
+   </table>
+ </div>
 </div>
-</div>
-
+</body>
