--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -31,6 +31,9 @@
 				</div>
 				<% end %>
 			</div>
+			<div class="" style = "text-align: center;">
+			<%= paginate @items,class: "paginate" %>
+			</div>
 		</div>
 	</div>
 </body>
