--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -28,6 +28,9 @@
 				</div>
 				<% end %>
 			</div>
+			<div class="" style = "text-align: center;">
+				<%= paginate @items,class: "paginate" %>
+			</div>
 		</div>
 	</div>
 </body>
