--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -15,6 +15,11 @@
 			<td><%= order.end_user.first_name %>
 				<%= order.end_user.last_name %>
 			</td>
+			<% total_quantity = 0 %>
+			<% order.order_items.each do |order_item| %>
+			<% total_quantity = total_quantity + order_item.order_quantity %>
+			<% end %>
+			<td><%= total_quantity %></td>
 			<td><%= order.order_status %></td>
 		</tr>
 
