--- a/app/views/admins/end_users/index.html.erb
+++ b/app/views/admins/end_users/index.html.erb
@@ -19,13 +19,11 @@
 						<td><%= link_to end_user.full_name ,admins_end_user_path(end_user.id)  %></td>
 						<td><%= end_user.email  %></td>
 						<!-- if文を使ってdeleted_atがあった場合の表示したい内容　無い時の表示したい内容を書く -->
-						<td>
-							<% if deleted_at.present? then
-								true = "退会済"
-							else
-								false = "有効"
-							end %>
-						</td>
+							<% if end_user.deleted_at.present? %>
+								<td>退会済</td>
+							<% else %>
+								<td>有効</td>
+							<% end %>
 						</tr>
 						<% end %>
 					</tbody>
