--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -26,7 +26,7 @@
 					<%= link_to end_users_item_path(item) do %>
 					<p><%= attachment_image_tag item, :image, size: 130, fallback:"no_image.jpg"%></p>
 					<p><%= item.name %></p>
-					<P>¥<%= item.price %>(税抜き)</P>
+					<P>¥<%= item.price.to_s(:delimited) %>(+tax)</P>
 					<% end %>
 				</div>
 				<% end %>
