--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -24,7 +24,7 @@
 					<%= link_to end_users_item_path(item) do %>
 					<p><%= attachment_image_tag item, :image, size: 130, fallback:"no_image.jpg"%></p>
 					<p><%= item.name %></p>
-					<p>¥<%= item.price %></p>
+					<p>¥<%= item.price.to_s(:delimited) %>(+tax)</p>
 					<% end %>
 				</div>
 				<% end %>
