--- a/app/views/end_users/orders/show.html.erb
+++ b/app/views/end_users/orders/show.html.erb
@@ -37,17 +37,26 @@
 				<tbody>
 					<tr>
 						<th>商品合計</th>
-						<td><%= @order.total_amount %></td>
+						<td>￥<%= @order.total_amount.to_s(:delimited) %></td>
 					</tr>
 					<tr>
 						<th>配送料</th>
 						<td>
-							<%= 800 %>
+							￥<%= 800.to_s(:delimited) %>
+						</td>
+					</tr>
+					<tr>
+						<th>消費税</th>
+						<td>
+							<% @tax = (@order.total_amount + 800)*0.1  %>
+							￥<%= @tax.floor.to_s(:delimited) %>
 						</td>
 					</tr>
 					<tr>
 						<th>ご請求額</th>
-						<td><%= @order.total_amount + 800 %></td>
+						<td><%  @total = (@order.total_amount + 800)*1.1 %>
+							￥<%= @total.floor.to_s(:delimited) %>
+						</td>
 					</tr>
 				</tbody>
 			</table>
@@ -69,9 +78,11 @@
 						<tr>
 						<td><%= item.name %></td>
 						<% end %>
-						<td><%= order_item.price_tax %></td>
+						<td>￥<%= order_item.price_tax.to_s(:delimited) %></td>
 						<td><%= order_item.order_quantity %></td>
-						<td><%= order_item.price_tax * order_item.order_quantity %></td>
+						<td>￥<% @a = order_item.price_tax * order_item.order_quantity%>
+							<%= @a.to_s(:delimited)  %>
+						</td>
 					</tr>
 					<% end %>
 				</tbody>
